# CMakeSeries

./: README.md  notes.txt
Project1/source/: CMakeLists.txt  vector.cpp
Project2/: notes.txt
Project2/source/: CMakeLists.txt  main.cpp
Project2/source/include/: dog.h  log.h  operation.h
Project2/source/src/: dog.cpp  log.cpp  operation.cpp
